--- a/src/app/counter/order-sheet/order-sheet.component.html
+++ b/src/app/counter/order-sheet/order-sheet.component.html
@@ -2,8 +2,16 @@
 <form novalidate [formGroup]="orderSheetForm" (ngSubmit)="onSubmitForm()">
   <section class="customer-name">
     <input formControlName="customerName" type="text" placeholder="Your Name">
+    <div *ngIf="customerNameControl.errors" class="errors">
+      <div *ngIf="customerNameControl.errors.required">
+        Required!
+      </div>
+      <div *ngIf="customerNameControl.errors.minlength">
+        Must be at least {{ customerNameControl.errors.minlength.requiredLength }} letters
+      </div>
+    </div>
     <div *ngIf="showWelcomeMessage"class="welcome-back">
-      Welcome back {{ orderSheetForm.get('customerName').value }}
+      Welcome back {{ customerNameControl.value }}
     </div>
   </section>
   <section class="size">
